tests/ui/resolve/resolve-dont-hint-macro.rs
fn main() {
    let zero = assert_eq::<()>();
    //~^ ERROR cannot find function `assert_eq` in this scope
}
